--- a/helix/config.toml
+++ b/helix/config.toml
@@ -5,25 +5,21 @@ theme = "nayfix"
 
 
 #move selection
-"A-i" = ["extend_to_line_bounds" , "delete_selection" ,"move_line_up", "paste_before"]
-"A-k" = ["extend_to_line_bounds" , "delete_selection" , "paste_after"]
+"A-k" = ["extend_to_line_bounds" , "delete_selection" ,"move_line_up", "paste_before"]
+"A-j" = ["extend_to_line_bounds" , "delete_selection" , "paste_after"]
+"A-h" = ["yank_to_clipboard" , "delete_selection" , "move_char_left" , "paste_before"]
+"A-l" = ["yank_to_clipboard" , "delete_selection" , "move_char_right" , "paste_after"]
 
 
 #move word
 "C-l" = "move_next_word_start"
-"C-j" = "move_prev_word_start"
+"C-h" = "move_prev_word_start"
 
 
 # mode switch 
 "C-x" = ["select_mode"]
 "esc" = "insert_mode"
 "A-x" = "command_mode"
-
-# movement keys 
-i = "move_visual_line_up"
-k = "move_visual_line_down"
-j = "move_char_left"
-l = "move_char_right"
 
 
 L = "goto_line_end"
@@ -40,15 +36,10 @@ J = "goto_line_start"
 "ret" = "open_below"
 "C-s" = "search"
 
-"]" = "goto_next_paragraph"
-"[" = "goto_prev_paragraph"
+"C-j" = "goto_next_paragraph"
+"C-k" = "goto_prev_paragraph"
 
 [keys.insert]
-#move word
-"C-l" = "move_char_right"
-"C-j" = "move_char_left"
-"C-i" = "move_visual_line_up"
-"C-k" = "move_visual_line_down"
 
 # mode switch 
 "C-x" = "select_mode"
@@ -73,7 +64,7 @@ J = "goto_line_start"
 
 #move word
 "C-l" = "extend_next_word_start"
-"C-j" = "extend_prev_word_start"
+"C-h" = "extend_prev_word_start"
 
 
 "A-w" = ":clipboard-yank"
@@ -84,23 +75,37 @@ J = "goto_line_start"
 L = "goto_line_end"
 J = "goto_line_start"
 
-i = "extend_visual_line_up"
-k = "extend_visual_line_down"
-j = "extend_char_left"
+k = "extend_visual_line_up"
+j = "extend_visual_line_down"
+h = "extend_char_left"
 l = "extend_char_right"
 
 
-"]" = "goto_next_paragraph"
-"[" = "goto_prev_paragraph"
+"C-j" = "goto_next_paragraph"
+"C-k" = "goto_prev_paragraph"
 
 #move selection
-"A-i" = ["extend_to_line_bounds" , "delete_selection" ,"move_line_up", "paste_before"]
-"A-k" = ["extend_to_line_bounds" , "delete_selection" , "paste_after"]
+"A-k" = ["extend_to_line_bounds" , "delete_selection" ,"move_line_up", "paste_before"]
+"A-j" = ["extend_to_line_bounds" , "delete_selection" , "paste_after"]
+"A-h" = ["yank_to_clipboard" , "delete_selection" , "move_char_left" , "paste_before"]
+"A-l" = ["yank_to_clipboard" , "delete_selection" , "move_char_right" , "paste_after"]
+
 
 
 [editor.inline-diagnostics]
+
 cursor-line = "warning"
 other-lines = "disable"
 
 [editor]
+
 auto-format = false
+true-color = true 
+line-number = "relative"
+
+[editor.cursor-shape]
+
+normal = "block"
+insert = "bar"  
+
+
